Old functionalities added

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,6 +12,7 @@ play {
       frameOptions = "SAMEORIGIN"
       contentSecurityPolicy = "connect-src 'self'"
     }
+    disabled += play.filters.csrf.CSRFFilter
   }
 }
 
