--- a/.cicleci/config.yml
+++ b/.cicleci/config.yml
@@ -4,7 +4,6 @@ jobs:
     docker:
       - image: circleci/classic:edge
 
-    working_directory: ~/hunderground
-
     steps:
       - checkout
+      - run: echo "hello world"
