--- a/.cicleci/config.yml
+++ b/.cicleci/config.yml
@@ -24,10 +24,11 @@ jobs:
       version: openjdk8
 
   dependencies:
+    pre:
+      - wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.1.deb
+      - sudo dpkg -i sbt-1.1.1.deb
     override:
       - sbt update
-    pre:
-      - sbt about
     cache_directories:
       - "~/.ivy2"
       - "~/.sbt"
