Event page done

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,6 +12,10 @@ play {
       frameOptions = "SAMEORIGIN"
       contentSecurityPolicy = "connect-src 'self'"
     }
+    hosts {
+//      allowed = [".hundergroundband.com", "localhost:9000"]
+      allowed = ["."]
+    }
     disabled += play.filters.csrf.CSRFFilter
   }
 }
