--- a/conf/application.conf
+++ b/conf/application.conf
@@ -25,7 +25,11 @@ slick {
     default {
       driver="slick.driver.H2Driver$"
       db.profile="org.h2.Driver"
-      db.url="jdbc:h2:mem:play;DB_CLOSE_DELAY=-1"
+//      db.url="jdbc:h2:~/hgmem/data"
+      db.url="jdbc:h2:/opt/docker/hgmem/data"
+//      db.url="jdbc:h2:mem:play;DB_CLOSE_DELAY=-1"
     }
   }
 }
+
+logger.scala.slick=DEBUG
