--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,14 +22,20 @@ play {
 
 slick {
   dbs {
-    default {
+    h2 {
       driver="slick.driver.H2Driver$"
       db.profile="org.h2.Driver"
-//      db.url="jdbc:h2:~/hgmem/data"
-      db.url="jdbc:h2:/opt/docker/hgmem/data"
+      db.url="jdbc:h2:~/hgmem/data"
+//      db.url="jdbc:h2:/opt/docker/hgmem/data"
 //      db.url="jdbc:h2:mem:play;DB_CLOSE_DELAY=-1"
     }
   }
 }
+
+slick.dbs.default.driver = "slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.url = "jdbc:mysql://mysql/hunderground"
+slick.dbs.default.db.user = "root"
+slick.dbs.default.db.password = "xoloh9oorahchu7Eihaete7eux5uceez"
 
 logger.scala.slick=DEBUG
